Atualização da doc
