# src/main/java/com/example/demo/dto/SkillVacancyDTO.java
@@ -1,0 +1,9 @@
+package com.example.demo.dto;
+
+import lombok.Getter;
+
+@Getter
+public class SkillVacancyDTO {
+    private Long skillId;
+    private boolean required;
+}
