# src/main/java/com/example/demo/enums/StageType.java
@@ -1,9 +1,20 @@
 package com.example.demo.enums;
 
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+@Getter
+@AllArgsConstructor
 public enum StageType {
-    BEHAVIORAL_TEST,
-    TECHNICAL_TEST,
-    SKILL_TEST,
-    CERTIFICATE_TEST,
-    EXPERIENCE_TEST,
+
+    TECHNICAL_TEST(true, 1),
+    BEHAVIORAL_TEST(true, 2),
+
+    SKILL_REQUIRED(false, null),
+    SKILL_OPTIONAL(false, null),
+    CERTIFICATE(false, null),
+    EXPERIENCE(false, null);
+
+    private final boolean visible;
+    private final Integer defaultOrder;
 }
